<resources>
    <string name="app_name">SampleApp</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="password">Password</string>

    <string-array name="spinner_items">
        <item>Select</item>
        <item>Id</item>
        <item>Name</item>
        <item>Address</item>
    </string-array>

    <string name="submit">Submit</string>
    <string name="reset">Reset</string>

</resources>
